--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="save">Save</string>
     <string name="share">Share</string>
     <string name="note">Notes</string>
+    <string name="empty_note">Empty note</string>
+    <string name="empty_note_title">Untitled</string>
+    <string name="save_message">You saved the note %1$s</string>
 </resources>
