--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="empty_note">Empty note</string>
     <string name="empty_note_title">Untitled</string>
     <string name="save_message">You saved the note %1$s</string>
+    <string name="note_date">16.08.22</string>
+    <string name="add_button">Add Button</string>
 </resources>
