--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,17 @@
     <string name="save_message">You saved the note %1$s</string>
     <string name="note_date">16.08.22</string>
     <string name="add_button">Add Button</string>
+    <string name="view_pager_activity">View Pager Activity</string>
+    <string name="dialog_message">Do you really want to save the note?</string>
+    <string name="positive">Yes</string>
+    <string name="negative">No</string>
+    <string name="title_activity_view_pager">ViewPagerActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
