--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,13 @@
     <string name="empty_note">Empty note</string>
     <string name="empty_note_title">Untitled</string>
     <string name="save_message">You saved the note %1$s</string>
-    <string name="note_date">16.08.22</string>
-    <string name="add_button">Add Button</string>
-    <string name="view_pager_activity">View Pager Activity</string>
+    <string name="note_date" translatable="false">16.08.22</string>
+    <string name="add_button">Add Note</string>
+    <string name="view_pager_activity" translatable="false">View Pager Activity</string>
     <string name="dialog_message">Do you really want to save the note?</string>
     <string name="positive">Yes</string>
     <string name="negative">No</string>
-    <string name="title_activity_view_pager">ViewPagerActivity</string>
+    <string name="title_activity_view_pager" translatable="false">ViewPagerActivity</string>
+    <string name="back">Back</string>
 
 </resources>
