--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -12,4 +12,6 @@
     <string name="positive">Да</string>
     <string name="negative">Нет</string>
     <string name="back">Назад</string>
+    <string name="empty_note">Пустая заметка</string>
+    <string name="untitled">Без названия</string>
 </resources>
