--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="negative">No</string>
     <string name="title_activity_view_pager" translatable="false">ViewPagerActivity</string>
     <string name="back">Back</string>
+    <string name="empty_note">Empty Note</string>
+    <string name="untitled">Untitled</string>
 
 </resources>
