--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Notes</string>
     <string name="title">Title</string>
     <string name="text">Text</string>
-    <string name="save">Save</string>
-    <string name="share">Share</string>
+    <string name="save">Save note</string>
+    <string name="share">Share note</string>
     <string name="note">Notes</string>
     <string name="save_message">You saved the note %1$s</string>
     <string name="note_date" translatable="false">16.08.22</string>
@@ -16,5 +16,7 @@
     <string name="back">Back</string>
     <string name="empty_note">Empty Note</string>
     <string name="untitled">Untitled</string>
+    <string name="edit_button">Edit note</string>
+    <string name="update">Update note</string>
 
 </resources>
