--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="untitled">Untitled</string>
     <string name="edit_button">Edit note</string>
     <string name="update">Update note</string>
-    <string name="get_note_from_firebase">Get note from Firebase</string>
+    <string name="download">Download note from Firebase</string>
+    <string name="note_description" translatable="false">Note Description</string>
 
 </resources>
