--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -19,4 +19,6 @@
     <string name="download">Скачать заметку из Firebase</string>
     <string name="internet_unavailable">Интернет недоступен</string>
     <string name="hide">Скрыть</string>
+    <string name="search">Поиск</string>
+    <string name="search_hint">Поиск по заметкам</string>
 </resources>
