--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="note_description" translatable="false">Note Description</string>
     <string name="internet_unavailable">Internet unavailable</string>
     <string name="hide">Hide</string>
+    <string name="search">Search</string>
+    <string name="search_hint">Search by notes</string>
 </resources>
