--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="hide">Hide</string>
     <string name="search">Search</string>
     <string name="search_hint">Search by notes</string>
+    <string name="web_view" translatable="false">Web View</string>
+    <string name="location" translatable="false">Location</string>
 </resources>
