--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -21,4 +21,8 @@
     <string name="hide">Скрыть</string>
     <string name="search">Поиск</string>
     <string name="search_hint">Поиск по заметкам</string>
+    <string name="latitude">Широта:</string>
+    <string name="longitude">Долгота:</string>
+    <string name="update_location">Обновить местоположение</string>
+    <string name="location_unenabled">Отслеживание вашего местоположения отключено. Пожалуйста, включите его</string>
 </resources>
