--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -25,4 +25,5 @@
     <string name="longitude">Долгота:</string>
     <string name="update_location">Обновить местоположение</string>
     <string name="location_unenabled">Отслеживание вашего местоположения отключено. Пожалуйста, включите его</string>
+    <string name="html_text"><![CDATA[<h1>Заглавленный текст из HTML</h1><p>Какой-то текст из html</p>]]></string>
 </resources>
